* Added tick marks and bars * Still need to fix clipped tick marks * Added text overflow ellipsis * Added hover for event text

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,13 @@
   overflow: hidden;
 }
 
+.chart-bottom-line {
+  position: absolute;
+  border-top: 2px solid rgb(0, 100, 25);
+  width: 100%;
+  z-index: 2;
+}
+
 .container {
   /* border: 4px solid red; */
   position: relative;
@@ -75,6 +82,39 @@
   padding-bottom: 6px;
 }
 
+.tickmark-bar{
+  position: relative;
+  /* background-color: rgba(0, 128, 0, 0.135); */
+  top: 0px;
+  height: 60px;
+}
+
+.tick {
+  position: absolute;
+  /* width: 3px; */
+  /* border: 4px solid violet; */
+  /* background-color: #0000006f; */
+  /* border-top: 1px; */
+  z-index: 2;
+}
+
+.tick-dates {
+  position: relative;
+  font-size: 0.9rem;
+  margin: 0;
+  padding-top: 25px;
+  left: -50%;
+  white-space: nowrap;
+}
+
+.bars {
+  position: absolute;
+  width: 1px;
+  /* left: 20px; */
+  border-left: 2px solid rgb(0, 100, 25);
+  z-index: 2;
+}
+
 .event {
   position: absolute;
   background-color: #61dafb;
@@ -84,17 +124,36 @@
   justify-content: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   height: 48px;
+  z-index: 3;
 }
 
 .event-container {
   padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.event-name,
+.event-dates {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
 }
 
 .event-name {
+  font-size: 1rem;
+  margin: 0;
   font-weight: bold;
   margin-bottom: 0.25rem;
+  margin-top: 0;
 }
 
 .event-dates {
   font-size: 0.8rem;
+  margin: 0;
 }
